# Program-Dependence-Graph-in-LLVM

./: .gitignore  .gitmodules  AllPasses.h  CMakeLists.txt  CMakeLists_For_Standard_Build.txt  CMakeLists_Make.txt  CMakeLists_Standard.txt  ConnectFunctions.cpp  ConnectFunctions.h  ControlDependencies.cpp  ControlDependencies.h  DSAGenerator.cpp  DSAGenerator.h  DataDependencies.cpp  DataDependencies.h  DepPrinter.cpp  DependencyGraph.h  FunctionWrapper.cpp  FunctionWrapper.h  LICENSE  Makefile  PDGHelper.cpp  PDGHelper.h  ProgramDependencies.cpp  ProgramDependencies.h  README.md  SystemControlDependenceGraph.h  SystemDataDependencies.h  ValueTracking.cpp  accinfo.txt  cdgragh.main.dot  doc.md  example.k4.c.txt  pdgragh.f.dot  pdgragh.main.dot  tree.hh
test/: CMakeLists.txt  FlowDependenceAnalysis.cpp  FlowDependenceAnalysis.h  FlowDependenceAnalysis_old.cpp  FlowDependenceAnalysis_old.h  build.sh  encrypt.bc  encrypt.c  encrypt.ll  geth_snmp.c  pdgragh.CalcSum.dot  pdgragh.main.dot  pdgtest.cpp  test.bc  test.ll  test_cast.bc  test_cast.c  test_cast.ll  test_control.bc  test_control.c  test_control.ll  test_func.bc  test_func.c  test_func.ll  test_func_paper.bc  test_func_paper.c  test_func_paper.ll
test/bitcode/control_dependency/: cdgragh.main.dot  ddgragh.cd.dot  ddgragh.main.dot  pdgragh.main.dot
test/bitcode/control_flow_func/: control_flow_func.bc  control_flow_func.ll  ddgragh._Z2f1ii.dot  ddgragh._Z2f2ii.dot  ddgragh.main.dot  pdgragh.main.dot
test/bitcode/encrypt_script/: ddgragh._Z7encryptPci.dot  pdgragh._Z7greeterPc.dot  pdgragh._Z7initkeyi.dot
test/bitcode/struct/: pdgragh.main.dot  (+1 more)
test/cdg_test/: build.sh  control_flow_with_external_func.c
test/control_dependency/: test_control_dependency.c
test/data_dependency/: func_partition.c  pdgragh.main 2.dot  pdgragh.pw_locate 3.dot  pdgragh.pw_update.dot  test_in_function_data_dependency.c  test_inter_function_data_dependency.c  test_struct_with_func.c
test/idl_gen_test/: accinfo.txt  example.k1.c  example.k2.c  example.k3.c  example.k4.c  example.k4.c.txt  example.k5.c  foobar_dev.c  ptrSplitIdl.txt  test_bitfield.c  test_struct_gen.c  test_void_type.c
test/issues01/: README.md  kernel_example.c  kernel_example.fieldaccess
test/llvm_bc/: .ps  pdgragh.func.dot  pdgragh.main.dot  print_dot.sh  simple_struct_func.bc  test_control_dependency.bc  test_encrypt_script.bc  test_in_function_data_dependency.bc  test_indirect_func_call.bc  test_inter_function_data_dependency.bc  test_struct.bc  test_struct_with_func.bc
test/llvm_ll/: simple_struct_func.ll  test_control_dependency.ll  test_in_function_data_dependency.ll  test_indirect_func_call.ll  test_inter_function_data_dependency.ll  test_struct.ll  test_struct_with_func.ll
test/pdg_test/: pdgragh.f.dot  pdgragh.main.dot  pdgragh.test.dot  test.c  test_actual_out_edge.c  test_alias.c  test_arr.c  test_complex_struct_passing.c  test_encrypt_script.c  test_field_sensitive_pdg.c  test_indirect_call.c  test_loading_inst.c  test_malloc.c  test_sample.c  test_union.c  test_void_pointer.c
test/program_dependency/: test_two_source_data_dependency.c
test/source/: build.sh  simple_struct_func.c  test_struct.c
test/test_idl_gen/: example.k1.c  example.k2.c  example.k3.c  example.k4.c  example.k5.c  kernel_example.c  kernel_example.k6.c  kernel_example2.c  kernel_example3.c  less  test.c  test.ll  test_arg_use.c  test_indirect_call.c  tracing_arg_info.c
test/test_parameter_tree/: pdgragh.CalcSum.dot  pdgragh.main.dot  test_attr.c  test_idl.c  test_multiuse.c  test_normal_func_call.c  test_passing_struct.c
test/unittest/: accinfo.txt  ptrSplitIdl.txt  test.bc  test.c  test.ll
unittest/: CMakeLists.txt  test_ddg.cpp
(+299 files in other folders)
